src/assets/css/single_page_css/list_games.css
/*------------------------*/
/* PAGE SPECIFIC ELEMENTS */
/*------------------------*/


body{
    background-image: url("../../../images/background.png");
    background-size: cover;
}


header {
    display: flex;
    justify-content: space-between;
    font-family: 'Berkshire Swash', cursive;
    color: white;
    padding: 30px 7vw 10px 10vw;
}


nav{
    display: flex;
    margin-top: 60px;
}

nav a{
    font-size: 2.3rem;
    text-decoration: none;
    color: white;
}

header h2{
    font-size: 100px;
}

header a:not([href]){
    font-size: 40px;
    line-height: 40px;
    cursor: pointer;
    transition: transform 0.3s;
    margin-right: 15px;
}

header a:not([href]):active{
    border-radius: 100%;
    -webkit-transform:rotate(180deg);
    -moz-transform:rotate(180deg);
    -o-transform:rotate(180deg);
}

nav a:hover{
    -webkit-animation: glow 1s ease-in-out infinite alternate;
    -moz-animation: glow 1s ease-in-out infinite alternate;
    animation: glow 1s ease-in-out infinite alternate;
}

@-webkit-keyframes glow {
    from {
        text-shadow: 0 0 1px #fff, 0 0 2px #fff, 0 0 3px #e7c509, 0 0 5px #e7c509, 0 0 6px #e7c509;
    }
    to {
        text-shadow: 0 0 2px #fff, 0 0 3px #e7c509, 0 0 5px #e7c509, 0 0 6px #e7c509, 0 0 7px #e7c509, 0 0 8px #e7c509, 0 0 10px #e7c509;
    }
}

/*end animatie glow effect*/


main {
    padding: 0 7vw;
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-end;
    font-family: Neuton, serif;
    font-size: 22px;
}

main li p{
    margin-left: 10px;
}

main a {
    padding: 1% 2%;
    border: white 1px solid;
    text-decoration: none;
    color: white;
    transition: background-color 1s, color 1s;
    display: inline-block;
    white-space: nowrap;
    margin-left: 10px;
    border-radius: 2px;
}

main a:hover{
    box-shadow:  0 0 5px 3px white inset;
}

main ul {
    margin-top: 2%;
    background-color: rgba(42, 42, 42, 0.5);
    height: 61vh;
    width: 81vw;
    display: block;
    padding: 2vh 2vw;
    overflow: auto;
}

main ul li {
    color: white;
    font-family: 'Questrial', sans-serif;
    background-color: rgb(231, 197, 9);
    display: flex;
    box-shadow:  0 0 4px 5px rgb(255, 244, 9) inset;
    width: 80vw;
    justify-content: space-between;
    margin-top: 15px;
    padding: 5px;
    align-items: center;
}

.shadow{
    box-shadow:  0 0 10px rgba(255, 244, 9, 0.6);
    box-sizing: border-box;
}

main ul li a {
    text-decoration: none;
    font-weight: bold;
    text-transform: uppercase;
    font-family: 'Questrial', sans-serif;
}

/*---scrollbar---*/

/* width */
::-webkit-scrollbar {
    width: 20px;
}

/* Track */
::-webkit-scrollbar-track {
    background-color: rgb(231, 197, 9);
    box-shadow:  0 0 4px 5px rgb(255, 244, 9) inset;
    padding: 5px;
}

/* Handle */
::-webkit-scrollbar-thumb {
    background-color: white;
    box-shadow:  0 0 4px 5px rgba(200, 200, 200, 0.4) inset;
    border-radius: 20px;
}

/*Back to index button */
a#index{
    font-size: 2em;
    font-weight: bold;
    text-decoration: none;
    color: white;
    display: block;
    margin-right: 1em;
    margin-left: 58em;
    margin-top: 1em;
    border: 2px white solid;
    border-radius: 25px;
    position: absolute;
    top: 0;
    right: 0;
    padding: 0.2em 0.3em 0.2em 0.2em;
}
.glow {
    font-size: 100px;
    color: #fff;
    text-align: center;
    -webkit-animation: glow 2s ease-in-out infinite alternate;
    -moz-animation: glow 2s ease-in-out infinite alternate;
    animation: glow 2s ease-in-out infinite alternate;
}
@-webkit-keyframes glow {
    from {
        text-shadow: 0 0 1px #fff, 0 0 2px #fff, 0 0 3px #e7c509, 0 0 5px #e7c509, 0 0 6px #e7c509;
    }
    to {
        text-shadow: 0 0 2px #fff, 0 0 3px #e7c509, 0 0 5px #e7c509, 0 0 6px #e7c509, 0 0 7px #e7c509, 0 0 8px #e7c509, 0 0 10px #e7c509;
    }
}
nav a:hover, a#index:hover{
    -webkit-animation: glow 1s ease-in-out infinite alternate;
    -moz-animation: glow 1s ease-in-out infinite alternate;
    animation: glow 1s ease-in-out infinite alternate;
}

